user-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
#  annotations:
#    prometheus.io/scrape: "true"
#    prometheus.io/path: "/actuator/prometheus"
#    prometheus.io/port: "8000"
spec:
  selector:
    app: user-service
  ports:
    - name: user-service-http-api-port
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
